* Update to v2.3 * Fix CSS selectors to properly format full comments under WP 3.8 * Fix JS selectors to show Expand/Collapse All links under WP 3.8 * Add Frequently Asked Questions section to readme.txt * Note compatibility through WP 3.8+ * Update copyright date (2014) * Add banner * Minor readme.txt text and formatting tweaks * Change donate link
git-svn-id: https://plugins.svn.wordpress.org/expandable-dashboard-recent-comments/trunk@828140 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/assets/admin.css
+++ b/assets/admin.css
@@ -1,3 +1,4 @@
-#the-comment-list .comment-item blockquote .excerpt-full p { display:block; margin:0 0 1em; }
+#the-comment-list .comment-item blockquote .excerpt-full p { display:block; margin:0 0 1em; } /* pre-WP3.8 */
+#latest-comments #the-comment-list .comment-item blockquote .excerpt-full p { display:block; margin:0 0 1em; }
 .c2c_edrc { display:block; }
 .c2c_edrc_all { display:none; }
